# payme

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  run.sh
.github/workflows/: tests.yml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  budget.rs  export.rs  fixed_expenses.rs  income.rs  items.rs  mod.rs  months.rs  savings.rs  stats.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/openapi/: mod.rs
backend/src/pdf/: mod.rs
backend/tests/: auth_tests.rs  budget_tests.rs  export_tests.rs  fixed_expenses_tests.rs  income_tests.rs  items_tests.rs  middleware_tests.rs  months_tests.rs  savings_tests.rs  stats_tests.rs
backend/tests/common/: mod.rs
frontend/: eslint.config.js  i18next.config.ts  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/locales/en/: translation.json
frontend/locales/pl/: translation.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BudgetSection.tsx  FixedExpenses.tsx  IncomeSection.tsx  ItemsSection.tsx  LanguageSwitcher.tsx  Layout.tsx  MonthNav.tsx  ProjectedSavingsCard.tsx  RetirementSavingsCard.tsx  RothIraCard.tsx  SavingsCard.tsx  Stats.tsx  Summary.tsx  VarianceModal.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx
frontend/src/context/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useCurrency.tsx  useMonth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  Settings.tsx
frontend/src/utils/: i18n.tsx
