[package]
name = "payme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["macros"] }
axum-extra = { version = "*", features = ["cookie"] }
tokio = { version = "*", features = ["full"] }
tower = "*"
tower-http = { version = "*", features = ["cors", "fs"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = ["runtime-tokio", "sqlite", "chrono"] }
argon2 = "*"
jsonwebtoken = { version = "*", features = ["rust_crypto"] }
chrono = { version = "*", features = ["serde"] }
printpdf = "0.7"
uuid = { version = "*", features = ["v4"] }
dotenvy = "*"
time = "*"

